Bug: PRD Reviewer: Jay Wootton Comment: Activity Stream work, fixed auto scrolling on IE.  Add "No entries found" if no search results were returned.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -26,6 +26,18 @@
 	z-index: 100;
 }
 
+.activityStreamNoEntriesFoundPanel
+{
+	background-color: #EBECA5;
+	border-color: #BABDB6;
+	border-style: solid solid solid;
+	border-width: 1px;
+	padding: .5em;
+	position: absolute;
+	top: 150px;
+	z-index: 100;
+}
+
 .activityStreamCtrlFooter
 {
 	background-color: #EFEEEC;
@@ -109,6 +121,7 @@
 {
 	overflow: auto;
 	padding-left: 10px;
+	position: relative;
 }
 
 .activityStreamTopEntryMainPanel
